           search parameters are saved as metadata in the virtual fs
           and displayed in panel's statusbar
    ADDED: filter option: Apply filter to directories
    ADDED: action: view > Apply settings to other tabs
    ADDED: action: view > Save settings as default (for new instances of this view type)
    ADDED: option: Panel > View > Locale aware sorting

    CHANGED: Use KrView for displaying search results,
             which is much faster than the previously used QTreeWidget.
    CHANGED: Removed default shortcuts for the Left/Right Bookmarks actions,
             as they conflict with the Back/Forward actions.
    CHANGED: After failed refresh, only focus location bar if the url was entered manually.
    CHANGED: Removed default shortcut for 'Cancel Refresh of View'
             as it conflicts with the 'Set Focus to the Panel' action.
             Unless a shortcut is assigned manually,
             ESC cancels the refresh when the panel is focused.
    CHANGED: Konfigurator: "apply" takes effect immediately.
    CHANGED: url commandline argument: if there is already a tab open with that url,
             it is activated, otherwise a new tab is opened in the active panel

    FIXED: When trying to close Konfigurator but canceling the "Apply changes ?" dialog,
           Konfigurator it is closed anyway.
    FIXED: [ 3073211 ] Wrong quoting when opening file in external editor
    FIXED: [ 3059457 ] new panel uses default columns instead of configured ones
    FIXED: [ 2898151 ] also in view-mode (F3) possible to edit, thanks to Kevin Kofler
    FIXED: panelpopup viewer: error messageboxes when file cannot be displayed
    FIXED: [ 2981303 ] Viewer/editor unused submenu Game, thanks to Kevin Kofler
    FIXED: regression making single-click mode unusable, thanks to Kevin Kofler
    FIXED: [ 3003338 ] Rename selects extension regression, thanks to Kevin Kofler